@@ -2,8 +2,17 @@ package Gitprep::API;
 use Mojo::Base -base;
 
 use Digest::MD5 'md5_hex';
+use Text::Markdown::Hoedown qw(HOEDOWN_EXT_FENCED_CODE HOEDOWN_EXT_TABLES);
 
 has 'cntl';
+
+sub markdown {
+  my ($self, $text) = @_;
+
+  my $text_e = Text::Markdown::Hoedown::markdown($text, extensions => HOEDOWN_EXT_FENCED_CODE|HOEDOWN_EXT_TABLES);
+  
+  return $text_e;
+}
 
 sub age_string {
   my ($self, $epoch_time) = @_;
