@@ -1,0 +1,25 @@
+<%
+  # API
+  my $api = gitprep_api;
+
+  # Parameters
+  my $user_id = param('user');
+  my $project_id = param('project');
+  my $issue_number = param('number');
+
+  layout 'common', title => "New issue - $user_id/$project_id";
+%>
+    <div class="compare-open-pull-request">
+      <form action="<%= url_for %>" method="post">
+        <%= hidden_field op => 'create-pull-request' %>
+        <div class="compare-open-pull-request-title">
+          <%= text_field 'title' %>
+        </div>
+        <div class="compare-open-pull-request-message">
+          <%= text_area 'message' %>
+        </div>
+        <div class="compare-open-pull-request-button">
+          <%= submit_button 'Create pull request', class => 'btn btn-success' %>
+        </div>
+      </form>
+    </div>
